...
    <string name="set_weight_description">Set %1$d weight</string>
    <string name="set_reps_description">Set %1$d repetitions</string>
    <string name="set_rir_description">Set %1$d RIR</string>
    <string name="set_count_range">Available: %1$d-%2$d</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="back_to_workout">Back to workout</string>
    <string name="technique">Technique</string>
    <string name="exercise_information">Exercise information</string>
    <string name="muscle_group">Muscle group</string>
    <string name="equipment">Equipment</string>
    <string name="default_rest">Default rest</string>
    <string name="seconds_value">%1$d sec</string>
...
